@@ -1,19 +1,20 @@
 package de.joblift.service.gitlabpanorama.core.aggregator;
 
-import static de.galan.commons.util.Sugar.*;
-import static java.util.stream.Collectors.*;
-
 import java.util.Arrays;
 import java.util.Comparator;
 import java.util.List;
+import java.util.function.Predicate;
 
 import de.joblift.service.gitlabpanorama.core.models.Pipeline;
 import de.joblift.service.gitlabpanorama.core.models.Status;
+
+import lombok.Getter;
 
 
 /**
  * Groups Pipelines for a ref by status
  */
+@Getter
 public class PipelinePair {
 
 	String name;
@@ -22,7 +23,6 @@ public class PipelinePair {
 	Pipeline active;
 	Pipeline current;
 
-
 	public PipelinePair(Pipeline... pipelines) {
 		name = pipelines[0].getProject().getName();
 		ref = pipelines[0].getRef();
@@ -30,28 +30,13 @@ public class PipelinePair {
 		Comparator<Pipeline> comparatorId = Comparator.comparing(Pipeline::getId);
 		Comparator<Pipeline> comparatorIdAndLc = comparatorId.thenComparing(Pipeline::latestChange).reversed();
 
-		List<Pipeline> list = Arrays.asList(pipelines).stream().sorted(comparatorIdAndLc).collect(toList());
+		List<Pipeline> list = Arrays.stream(pipelines).sorted(comparatorIdAndLc).toList();
 		active = list.stream().filter(Pipeline::hasActivity).findFirst().orElse(null);
-		current = list.stream().filter(not(Pipeline::hasActivity)).findFirst().orElse(null);
+		current = list.stream().filter(Predicate.not(Pipeline::hasActivity)).findFirst().orElse(null);
 
 		if ((active != null && current != null) && (current.getId() > active.getId() || current.latestChange().isAfter(active.latestChange()))) {
 			active = null;
 		}
-	}
-
-
-	public String getName() {
-		return name;
-	}
-
-
-	public String getRef() {
-		return ref;
-	}
-
-
-	public Pipeline getCurrent() {
-		return current;
 	}
 
 
@@ -62,11 +47,6 @@ public class PipelinePair {
 
 	public Status getStatus() {
 		return ((current != null) ? current : active).getStatus();
-	}
-
-
-	public Pipeline getActive() {
-		return active;
 	}
 
 
