@@ -4,13 +4,12 @@ import static java.nio.charset.StandardCharsets.*;
 import static java.util.Comparator.*;
 import static java.util.stream.Collectors.*;
 
-import java.io.UnsupportedEncodingException;
 import java.net.URLEncoder;
 import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
 
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Component;
 
 import com.google.common.collect.ListMultimap;
@@ -31,18 +30,15 @@ import de.joblift.service.gitlabpanorama.util.Mapper;
 @Component
 public class GitlabClient {
 
-	long requestCounter = 0;
+	private Boolean filterTags = true;
+	private long requestCounter = 0;
 
-	@Autowired
-	GitlabConfiguration configuration = new GitlabConfiguration();
+	private GitlabConfiguration configuration;
+	private ResourceMatcher filter;
 
-	Boolean filterTags = true;
-
-	@Autowired
-	ResourceMatcher filter;
-
-
-	public GitlabClient() {
+	public GitlabClient(GitlabConfiguration configuration, ResourceMatcher filter) {
+		this.configuration = configuration;
+		this.filter = filter;
 		Flux.setDefaultTimeoutRead(configuration.getTimeout());
 	}
 
@@ -63,7 +59,7 @@ public class GitlabClient {
 		try (Response response = http.get()) {
 			requestCounter++;
 			GitlabProject[] projects = Mapper.get().readValue(response.getStreamAsString(), GitlabProject[].class);
-			List<GitlabProject> collect = Arrays.asList(projects).stream()
+			List<GitlabProject> collect = Arrays.stream(projects)
 				.filter(p -> filter.isProjectMatching(p.getPathNamespaced()))
 				.filter(GitlabProject::isJobsEnabled)
 				.collect(toList());
@@ -75,7 +71,7 @@ public class GitlabClient {
 		catch (Exception ex) {
 			Say.error("Failed retrieving projects from gitlab", ex);
 		}
-		return null;
+		return Collections.emptyList();
 	}
 
 
@@ -93,7 +89,7 @@ public class GitlabClient {
 		try (Response response = http.get()) {
 			requestCounter++;
 			GitlabPipelineMinimal[] pipelines = Mapper.get().readValue(response.getStreamAsString(), GitlabPipelineMinimal[].class);
-			List<GitlabPipelineMinimal> collect = Arrays.asList(pipelines).stream().peek(pipeline -> pipeline.setProject(project)).collect(toList());
+			List<GitlabPipelineMinimal> collect = Arrays.stream(pipelines).peek(pipeline -> pipeline.setProject(project)).collect(toList());
 			// identify the last states per ref, and add them to the result
 			ListMultimap<String, GitlabPipelineMinimal> index = Multimaps.index(collect, p -> p.getRef() + "/" + p.getStatus());
 			for (String key : index.keySet()) {
@@ -168,12 +164,7 @@ public class GitlabClient {
 
 
 	private String encUrl(String input) {
-		try {
-			return URLEncoder.encode(input, UTF_8.name());
-		}
-		catch (UnsupportedEncodingException ex) {
-			throw new RuntimeException(ex);
-		}
+		return URLEncoder.encode(input, UTF_8);
 	}
 
 }
